@@ -1,3 +1,9 @@
+2020-03-15  Allen D. Ball  <ball@hcf.dev>
+
+	* roles/aws-user-data/templates/user-data.bash:
+	Do not install python or pip if already installed.
+	Use "mount -a" instead of "shutdown -r now" at completion.
+
 2020-03-13  Allen D. Ball  <ball@hcf.dev>
 
 	* roles/certbot: Initial writing.
